<resources>
    <string name="app_name">Namu</string>

    <string name="sign_in">SIGN IN</string>
    <string name="email">EMAIL ADDRESS</string>
    <string name="password">PASSWORD</string>
    <string name="sign_up">SIGN UP</string>
    <string name="new_user">New user?</string>
    <string name="sign_in_with">Or Signin with</string>
    <string name="full_name">FULL NAME</string>
    <string name="already_reg">Already registered?</string>
    <string name="Forgot">FORGOT?</string>

    <string name="emaill">Email</string>
    <string name="phone">Phone</string>
    <string name="Name">Name</string>
    <string name="your_message">Your message</string>
    <string name="send">Send us</string>

    <string name="offers">OFFERS</string>
    <string name="Addnote">Add a note (Extra source, no olive oil, etc.)</string>
    <string name="items">Items in cart</string>
    <string name="total">Total</string>

    <string name="sub_total">Sub Total</string>
    <string name="service_free">Service fee(4%)</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="promocode">Have promocode?</string>
    <string name="proceed">Proceed to Checkout</string>
    <string name="Pay">Pay</string>

    <string name="Amount_Payable">Amount Payable</string>
    <string name="payment_mode">Select Payment Mode</string>
    <string name="Cash_d">Cash on Delivery</string>
    <string name="Cash">Cash</string>
    <string name="Wallet">Wallets</string>
    <string name="Cards">Cards</string>
    <string name="Debit">Debit Card &amp; Credit Card</string>
    <string name="net_bank">Net Banking</string>
    <string name="pay_d">Pay directly from your bank</string>
    <string name="confirm">Confirm Order</string>

    <string name="saved">Your Saved Addresses</string>
    <string name="add_new">Add new</string>
    <string name="f_name">Full Name</string>
    <string name="email_add">Email Address</string>

    <string name="pay_amount">Pay Amount</string>
    <string name="delivery">Delivery address</string>

    <string name="proceed_payment">Proceed to payment</string>

    <string name="food_type">Type of food</string>
    <string name="price_sort">Price sort by</string>
    <string name="price_range">Price range</string>
    <string name="both">Both</string>
    <string name="veg">Veg</string>
    <string name="non_veg">Non-veg</string>
    <string name="hightolow">High to Low</string>
    <string name="lowtohigh">Low to high</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="apply_f">Apply Filters</string>

    <string name="order_placed">Order placed</string>
    <string name="prepare">Preparing</string>
    <string name="dispatched">Dispatched</string>
    <string name="deliver">Delivered</string>
    <string name="cash_delivery">Cash on Delivery</string>

    <string name="add">Add</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_orders">Orders</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_rate">Rate us</string>
    <string name="nav_support">Support</string>
    <string name="nav_share">Share</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Orders</item>
        <item>Profile</item>
        <item>Rate us</item>
        <item>Support</item>
        <item>share</item>
    </string-array>

    <string name="phone_num_10">10 Digit Phone Number</string>
    <string name="flat">Flat/House Number/Floor/Building</string>
    <string name="locality">Locality/Street/Society</string>
    <string name="landmark">Landmark</string>
    <string name="pin">6 Digit Pincode</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="Add_add">Add Address</string>
    <string name="update_add">Update Address</string>
    <string name="add_new_add">Add new Address</string>

    <string-array name="state_array">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string name="title_activity_map_tracking">Map Route Tracking</string>
    <string name="track_path_on_map">Walk and route your path on map</string>
    <string name="permission_notice">Please note that your location permission is important if you want to draw your route on map while walking or running</string>
    <string name="permission_title">Location Permission Denied</string>
    <string name="cancel_permission_notice">Wow, please come back again when you need it and grant the permission</string>
    <string name="action_stop">Stop</string>


    <string name="font_bold">fonts/roboto_bold.ttf</string>
    <string name="font_regular">fonts/font_rg.ttf</string>
    <string name="font_lt">fonts/roboto_light.ttf</string>
    <string name="font_medium">fonts/roboto_medium.ttf</string>

    <string name="textTrack">Track</string>
    <string name="txtorderplaced">YOUR ORDER IS PLACED</string>
    <string name="txtPackageDispatched">YOUR PACKAGE IS DISPATCHED</string>
    <string name="txtOnRoute">Order Picked Up \n\n<u>Track With Teliver</u></string>
    <string name="txtOrderDeivered">Order T \'elivered</string>
    <string name="txtInKitchen">Order Confirmed</string>
    <string name="txtDeliveryDetails">YOUR DELIVERY DETAILS</string>
    <string name="txtName">Name</string>
    <string name="txtCart">Cart</string>
    <string name="txtOrder">Order</string>
    <string name="txtAddress">Delivery Address</string>
    <string name="txtMobile">Mobile Number</string>
    <string name="txtCartItems">YOUR ORDER ITEMS</string>
    <string name="txtStartTracking">Start Tracking</string>
    <string name="txtPaymentSuccess">Order Received</string>
    <string name="txtOrderConfirmed">ORDER CONFIRMED</string>
    <string name="txtTeliverId">The tracking id you received from Teliver, enter it to track your order</string>
    <string name="txtNearYou">Near your Delivery Address (View in Maps)</string>
    <string name="txtFoodHint">Hot and Tasty food will be on the way soon</string>
    <string name="txtProcessing">Order Processing</string>
    <string name="txtOutToDelivery">Your order is now out for delivery.Track your Order</string>
    <string name="txtNearDoorPush">Your order has been confirmed by Restaurant. Soon it will be out for delivery.</string>
    <string name="txtDeliveredPush">Your order has been delivered successfully.</string>
    <string name="txtDeliveryAssigned">Order has been confirmed by Restaurant. Waiting for Delivery Agent</string>
    <string name="btnTxtTracker">Track your order</string>
    <string name="txtSubTotal">Subtotal</string>
    <string name="txtResPromo">Coupon Code</string>
    <string name="txtTaxes">GST (18%)</string>
    <string name="txtFinaltotal">You Paid</string>
    <string name="symbolRupee">₹</string>
    <string name="txtorderID">Order Id</string>
    <string name="oderId">164752266</string>
    <string name="txtPaymentMode">PAYMENT MODE</string>
    <string name="paymentMode">CARD PAYMENT</string>
    <string name="txtPackingCharge">Packaging Charge</string>
    <string name="txtDeliveryCharge">Delivery Charge</string>



</resources>
