<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_store_mall_directory_green_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_local_dining_green_24dp"
            android:title="@string/nav_orders" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_pin_green_24dp"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_message_green_24dp"
            android:title="@string/nav_support" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_green_24dp"
            android:title="@string/nav_share" />

        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_thumb_up_green_24dp"
            android:title="@string/nav_rate" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_person_pin_green_24dp"
            android:title="Logout" />
    </group>

</menu>