<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        xmlns:android="http://schemas.android.com/apk/res/android"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:paddingTop="15dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingBottom="15dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_num_10"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/black"
                android:paddingBottom="1dp"
                android:inputType="phone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flat"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:layout_marginTop="25dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/black"
                android:paddingBottom="1dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locality"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:layout_marginTop="25dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:paddingBottom="1dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/landmark"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:layout_marginTop="25dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:paddingBottom="1dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pin"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:layout_marginTop="25dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:paddingBottom="1dp"
                android:inputType="number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:weightSum="100"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="50">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="50">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/state"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"/>

                    <android.support.v7.widget.AppCompatSpinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/Add_add"
        android:textColor="@color/colorAccent" />

</RelativeLayout>